--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,6 @@
 @import "tailwindcss";
 
-body {
+/* body {
   font-family:
     system-ui,
     -apple-system,
@@ -13,14 +13,14 @@ body {
     "Open Sans",
     "Helvetica Neue",
     sans-serif;
-}
+} */
 
-.layout {
+/* .layout {
   display: grid;
   grid-template-rows: auto 1fr auto;
   gap: 32px;
   height: 100dvh;
-}
+} */
 
 /* https://dev.to/afif/i-made-100-css-loaders-for-your-next-project-4eje */
 .loader {
