--- a/src/index.css
+++ b/src/index.css
@@ -44,3 +44,22 @@
       100% 100%;
   }
 }
+
+.spinner {
+  width: 18px;
+  padding: 3px;
+  aspect-ratio: 1;
+  border-radius: 50%;
+  background: white;
+  --_m: conic-gradient(#0000 10%, #000), linear-gradient(#000 0 0) content-box;
+  -webkit-mask: var(--_m);
+  mask: var(--_m);
+  -webkit-mask-composite: source-out;
+  mask-composite: subtract;
+  animation: spin 1s infinite linear;
+}
+@keyframes spin {
+  to {
+    transform: rotate(1turn);
+  }
+}
